--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-  <script src="//cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js" target="_blank"></script>
+    <script src="libraries/p5.js"></script>
     <script src="libraries/matter.js"></script>
     
     <script src="js/Ground.js"></script>
